fjord-compiler/test/errors/TooManyParameters2.fj
module test.errors.TooManyParameters2

myFun : Int -> Int -> Int
myFun a b c =
  a
